@@ -1,5 +1,6 @@
 2010-05-22  Steffen Kamper  <info@sk-typo3.de>
 
+	* Follow-up to bug #13868: Integrate TYPO3 donate notice in the backend
 	* Fixed bug #14387: Updating the CGLs [was: Remove the feature "Enable extensions without review (basic security check)" from EM] (thanks to Lars Houmark)
 
 2010-05-22  Oliver Hader  <oliver@typo3.org>
